# OpenGL_Boilerplate

./: CMakeLists.txt  README.md  main.cpp
